src/test/deca/context/invalid/obtained_res/doublDefMethcont.res
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:40) - verify program: start
DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:43) - verify listClass: start
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:45) - verify program: Pass 1 end
./src/test/deca/context/invalid/created/testPass2/doublDefMeth.deca:10:4: DoubleMethodDeclarationException: The method couldn't be declared because it has already been defined.
